# ADIOS2-Examples

./: run_experiment_with_monitoring.sh
results/: plot_throughput.py
results/lrc-osd-out/: plot_experiment.py
source/cpp/gray-scott/: CMakeLists.txt  CephFS-Setup-Guide.md  README.md  RUN.md  adios2-cephfs.xml  adios2-rbd.xml  run_cephfs.sh  run_performance_tests.sh  run_rbd.sh  run_rbd_ec.sh  settings-ceph.json  settings-rbd-130gb.json  settings-rbd.json  settings.json  test_rbd_performance.sh
source/cpp/gray-scott/analysis/: pdf-calc.cpp
source/cpp/gray-scott/simulation/: main.cpp
